--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,16 +143,19 @@ h1, h2, h3, h4, h5, h6 {
 .navbar li {
   position: relative;
 }
-.navbar a, .navbar a:focus {
+.navbar a{
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px 0 10px 30px;
   font-size: 15px;
-  font-weight: 500;
-  color: rgb(0, 0, 0);
+  font-weight: bold;
+  color: #FF6A00;
   white-space: nowrap;
   transition: 0.3s;
+}
+.navbar a:focus {
+  color: #002A62;
 }
 .navbar a i, .navbar a:focus i {
   font-size: 12px;
@@ -160,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  font-size: 16px;
+  color: #002A62;
   transition: 0.3s ease;
 }
 .navbar .getstarted, .navbar .getstarted:focus {
@@ -202,9 +205,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 .navbar .dropdown ul a i {
   font-size: 12px;
-}
-.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #47b2e4;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -329,7 +329,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #ffffff;
+  background: none;
 }
 #hero .container {
   padding-top: 72px;
@@ -339,10 +339,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: rgb(0, 0, 0);
+  color: #ff5e00;
 }
 #hero h2 {
-  color: rgba(0, 0, 0, 0.6);
+  color: #002A62;
   margin-bottom: 50px;
   font-size: 24px;
 }
