--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -329,7 +329,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: rgba(0, 0, 0, 0.050);
+  background: #006eff11
 }
 #hero h1 {
   margin: 0 0 10px 0;
@@ -446,7 +446,7 @@ section {
 }
 
 .section-bg {
-  background: rgba(0, 0, 0, 0.050)
+  background: #006eff11
 }
 
 .section-title {
@@ -959,11 +959,11 @@ section {
 .team .member .member-info {
   padding-left: 30px;
 }
-.team .member h4 {
+.team .member a {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #37517e;
+  color: #002A62;
 }
 .team .member span {
   display: block;
@@ -1000,15 +1000,15 @@ section {
   border-radius: 50px;
   width: 32px;
   height: 32px;
-  background: #eff2f8;
+  background: #f5f5f5;
 }
 .team .member .social a i {
-  color: #37517e;
+  color: #002A62;
   font-size: 16px;
   margin: 0 2px;
 }
 .team .member .social a:hover {
-  background: #47b2e4;
+  background: #002A62;
 }
 .team .member .social a:hover i {
   color: #fff;
@@ -1465,7 +1465,6 @@ section {
   margin: 0 0 10px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
-  text-transform: uppercase;
   font-weight: 600;
   color: #37517e;
 }
