--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -790,7 +790,7 @@ section {
   margin-bottom: 0;
 }
 .services .icon-box:hover {
-  transform: translateY(-10px);
+  border: 0;
 }
 
 
@@ -798,7 +798,7 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.76), rgba(29, 43, 68, 0.76)), url("../img/cta-bg.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.801), rgba(20, 30, 48, 0.795)), url("../img/cta-bg.jpg") fixed center center;
   background-size: cover;
   padding: 120px 0;
 }
@@ -816,7 +816,7 @@ section {
   font-weight: 600;
   font-size: 20px;
   display: inline-block;
-  padding: 5px 15px;
+  padding: 5px 25px;
   border-radius: 50px;
   transition: 0.5s;
   margin: 10px;
@@ -978,7 +978,7 @@ section {
   position: relative;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   padding: 30px;
-  border-radius: 5px;
+  border-radius: 0px;
   background: #fff;
   transition: 0.5s;
 }
@@ -989,9 +989,6 @@ section {
 }
 .team .member .pic img {
   transition: ease-in-out 0.3s;
-}
-.team .member:hover {
-  transform: translateY(-10px);
 }
 .team .member .member-info {
   padding-left: 30px;
@@ -1550,7 +1547,7 @@ section {
   line-height: 1;
 }
 #footer .footer-top .footer-links ul a:hover {
-  text-decoration: underline;
+  font-weight: 500;
 }
 #footer .footer-top .social-links a {
   font-size: 18px;
