--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,8 +98,8 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   visibility: hidden;
   opacity: 0;
-  right: 10px;
-  bottom: 10px;
+  right: 12px;
+  bottom: 40px;
   z-index: 996;
   background: #01214d;
   width: 35px;
@@ -113,7 +113,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #002a6279;;
+  background: #002a6279;
 }
 .back-to-top.active {
   visibility: visible;
@@ -309,7 +309,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 10px 0;
   border: 1px solid rgba(0, 54, 99, 0.192);
   border-radius: 0px;
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(255, 255, 255, 0.966);
   overflow-y: auto;
   transition: 0.3s;
 }
